@@ -1200,7 +1200,7 @@ void tcppacketoptinfo(u8 *optp, int len, char *result, int bufsize) {
 
 
 
-/* A trivial function used with qsort to sort the routes by metric and netmask */
+/* A trivial function used with qsort to sort the routes by netmask and metric */
 static int routecmp(const void *a, const void *b) {
   struct sys_route *r1 = (struct sys_route *) a;
   struct sys_route *r2 = (struct sys_route *) b;
@@ -1209,15 +1209,15 @@ static int routecmp(const void *a, const void *b) {
   else if (r1->dest.ss_family > r2->dest.ss_family)
     return 1;
 
-  if (r1->metric < r2->metric)
-    return -1;
-  else if (r1->metric > r2->metric)
-    return 1;
-
   if (r1->netmask_bits < r2->netmask_bits)
     return 1;
   else if (r1->netmask_bits > r2->netmask_bits)
     return -1;
+
+  if (r1->metric < r2->metric)
+    return -1;
+  else if (r1->metric > r2->metric)
+    return 1;
 
   /* Compare addresses of equal elements to make the sort stable, as suggested
      by the Glibc manual. */
@@ -1698,7 +1698,7 @@ struct sys_route *getsysroutes(int *howmany, char *errstr, size_t errstrlen) {
     return NULL;
   }else{
     numroutes = *howmany;
-    /* Ensure that the route array is sorted by metric and netmask */
+    /* Ensure that the route array is sorted by netmask and metric */
     qsort(routes, numroutes, sizeof(routes[0]), routecmp);
   }
   return routes;
