@@ -1,5 +1,10 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Nmap's routing table is now sorted first by netmask, then by metric.
+  Previously it was the other way around, which could cause a very
+  general route with a low metric to be preferred over a specific
+  route with a higher metric.
+
 o [Ncat] The -i option (idle timeout) now works in listen mode as well
   as connect mode. [Tomas Hozza]
 
